[package]
name = "fdon"
version = "0.3.0"
edition = "2024"

# --- REQUIRED FIELDS FOR PUBLISHING ---

description = "A high-performance, zero-copy, and minified data format (FDON) parser for Rust, leveraging SIMD for read speed."
license = "Apache-2.0" 
authors = ["irammini <me@teaserverse.online>"] 
readme = "README.md"
repository = "https://github.com/irammini/fdon" 
keywords = ["fdon", "parser", "zero-copy", "serialization", "high-performance"]
categories = ["data-structures", "parsing", "encoding"]

# --- EXCLUDE FILES FOR CRATE PACKAGING (Tối ưu kích thước) ---
exclude = [
    "main.rs",
    "tests/*",
    "*.fdon" # Ví dụ file FDON
]

# --- DEPENDENCIES ---
[dependencies]
memchr = "2.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- TỐI ƯU HÓA PARSE SỐ (Giữ nguyên) ---
fast-float = "0.2.0"
atoi = "2.0.0"

# --- TỐI ƯU HÓA "ALL-IN" (Kế hoạch cuối cùng) ---

# 1. Bumpalo (Arena + Vec)
# Thêm 'allocator-api2' để nó có thể "nói chuyện" với hashbrown
bumpalo = { version = "3.16.0", features = ["collections", "serde", "allocator-api2"] }

# 2. Hashbrown (HashMap nhanh)
# Thêm 'allocator-api2' để nó nhận diện Bumpalo
hashbrown = { version = "0.14.5", features = ["serde", "allocator-api2"] }

# 3. AHash (Hasher nhanh)
ahash = { version = "0.8.11", features = ["serde"] }