[package]
name = "fdon"
version = "0.3.0"
edition = "2024"

# --- REQUIRED FIELDS FOR PUBLISHING ---

description = "A high-performance, zero-copy, and minified data format (FDON) parser for Rust, leveraging SIMD for read speed."
license = "Apache-2.0" 
authors = ["irammini <me@teaserverse.online>"] 
readme = "README.md"
repository = "https://github.com/irammini/fdon" 
keywords = ["fdon", "parser", "zero-copy", "serialization", "high-performance"]
categories = ["data-structures", "parsing", "encoding"]

# --- EXCLUDE FILES FOR CRATE PACKAGING (Optimize size) ---
exclude = [
    "main.rs",
    "tests/*",
    "*.fdon" # Example FDON file
]

# --- DEPENDENCIES ---
[dependencies]
memchr = "2.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- NUMBER PARSING OPTIMIZATIONS ---
fast-float = "0.2.0"
atoi = "2.0.0"

# --- OPTIMIZATIONS ---

# 1. Bumpalo (Arena + Vec)
# Add 'allocator-api2' so it can communicate with hashbrown
bumpalo = { version = "3.16.0", features = ["collections", "serde", "allocator-api2"] }

# 2. Hashbrown (Fast HashMap)
# Add 'allocator-api2' to recognize Bumpalo
hashbrown = { version = "0.14.5", features = ["serde", "allocator-api2"] }

# 3. AHash (Fast Hasher)
ahash = { version = "0.8.11", features = ["serde"] }